vertical price-is-right spinwheel

--- a/helm/mlb-spinwheel/values.yaml
+++ b/helm/mlb-spinwheel/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 image:
   repository: registry.k8s.blacktoaster.com/mlb-spinwheel
   pullPolicy: Always
-  tag: "latest"
+  tag: "e2a9675"
 
 service:
   type: ClusterIP
