--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,14 @@
 FROM nginx:alpine
 
-# Copy static files to nginx html directory
+# Copy static files
 COPY index.html /usr/share/nginx/html/
 COPY script.js /usr/share/nginx/html/
 COPY style.css /usr/share/nginx/html/
+COPY wheel.jpg /usr/share/nginx/html/
 
-# Expose port 80
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
