--- a/helm/spinwheel-frontend/templates/certificate.yaml
+++ b/helm/spinwheel-frontend/templates/certificate.yaml
@@ -1,18 +1,16 @@
-{{- if .Values.certificate.enabled -}}
+{{- if .Values.certificate.enabled }}
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ include "mlb-spinwheel.fullname" . }}
+  name: {{ include "spinwheel-frontend.fullname" . }}-cert
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "mlb-spinwheel.labels" . | nindent 4 }}
+    {{- include "spinwheel-frontend.labels" . | nindent 4 }}
 spec:
-  commonName: {{ .Values.ingress.host }}
   secretName: {{ .Values.ingress.tls.secretName }}
   issuerRef:
     name: {{ .Values.certificate.issuerName }}
     kind: {{ .Values.certificate.issuerKind }}
-    group: cert-manager.io
   dnsNames:
-  - {{ .Values.ingress.host }}
+    - {{ .Values.ingress.host }}
 {{- end }}
