--- a/helm/spinwheel-frontend/templates/service.yaml
+++ b/helm/spinwheel-frontend/templates/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mlb-spinwheel.fullname" . }}
+  name: {{ include "spinwheel-frontend.fullname" . }}
   namespace: {{ .Values.namespace.name }}
   labels:
-    {{- include "mlb-spinwheel.labels" . | nindent 4 }}
+    {{- include "spinwheel-frontend.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 80
       protocol: TCP
       name: http
   selector:
-    {{- include "mlb-spinwheel.selectorLabels" . | nindent 4 }}
+    {{- include "spinwheel-frontend.selectorLabels" . | nindent 4 }}
