--- a/helm/spinwheel-backend/templates/secret.yaml
+++ b/helm/spinwheel-backend/templates/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "spinwheel-backend.fullname" . }}-claude
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "spinwheel-backend.labels" . | nindent 4 }}
 type: Opaque
