--- a/helm/spinwheel-backend/templates/service.yaml
+++ b/helm/spinwheel-backend/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "spinwheel-backend.fullname" . }}
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "spinwheel-backend.labels" . | nindent 4 }}
 spec:
