--- a/helm/spinwheel-frontend/templates/service.yaml
+++ b/helm/spinwheel-frontend/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "spinwheel-frontend.fullname" . }}
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "spinwheel-frontend.labels" . | nindent 4 }}
 spec:
