--- a/backend/helm/values.yaml
+++ b/backend/helm/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 image:
   repository: registry.k8s.blacktoaster.com/spinwheel-backend
   pullPolicy: Always
-  tag: "26d06a0"
+  tag: "latest"
 
 service:
   type: ClusterIP
