--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 # Copy source
-COPY main.go ./
+COPY *.go ./
 
 # Build
 RUN CGO_ENABLED=0 GOOS=linux go build -o /spinwheel-server
