--- a/frontend/helm/templates/deployment.yaml
+++ b/frontend/helm/templates/deployment.yaml
@@ -19,6 +19,11 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        env:
+        {{- if .Values.opponentSelector.url }}
+        - name: OPPONENT_SELECTOR_URL
+          value: {{ .Values.opponentSelector.url | quote }}
+        {{- end }}
         ports:
         - name: http
           containerPort: 80
